Use FluentAvalonia conditionally on Windows.

--- a/src/Woohoo.ChecksumVerifier.AvaloniaDesktop/App.axaml
+++ b/src/Woohoo.ChecksumVerifier.AvaloniaDesktop/App.axaml
@@ -8,6 +8,13 @@
     <!--  "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options.  -->
 
     <Application.Styles>
-        <sty:FluentAvaloniaTheme />
+        <OnPlatform>
+            <OnPlatform.Default>
+                <FluentTheme />
+            </OnPlatform.Default>
+            <OnPlatform.Windows>
+                <sty:FluentAvaloniaTheme />
+            </OnPlatform.Windows>
+        </OnPlatform>
     </Application.Styles>
 </Application>
