Use macOS specific styles.

--- a/src/Woohoo.ChecksumVerifier.AvaloniaDesktop/App.axaml
+++ b/src/Woohoo.ChecksumVerifier.AvaloniaDesktop/App.axaml
@@ -15,6 +15,9 @@
             <OnPlatform.Windows>
                 <sty:FluentAvaloniaTheme />
             </OnPlatform.Windows>
+            <OnPlatform.macOS>
+                <StyleInclude Source="avares://Devolutions.AvaloniaTheme.MacOS/MacOSTheme.axaml" />
+            </OnPlatform.macOS>
         </OnPlatform>
     </Application.Styles>
 </Application>
