Update MacOS theme package.

--- a/src/Woohoo.ChecksumVerifier.AvaloniaDesktop/App.axaml
+++ b/src/Woohoo.ChecksumVerifier.AvaloniaDesktop/App.axaml
@@ -16,7 +16,7 @@
                 <sty:FluentAvaloniaTheme />
             </OnPlatform.Windows>
             <OnPlatform.macOS>
-                <StyleInclude Source="avares://Devolutions.AvaloniaTheme.MacOS/MacOSTheme.axaml" />
+                <DevolutionsMacOsTheme />
             </OnPlatform.macOS>
         </OnPlatform>
     </Application.Styles>
